--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -1,15 +1,13 @@
 .bottombar {
     height: 60px;
     width: 100%;
-    position: absolute;
     display: flex;
-    bottom: 0;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+
     border-top: 2px solid lightgray;
     box-shadow: 0 0 10px rgb(171, 171, 171);
-
-    background: rgb(32, 32, 56);
+    background: rgb(4, 19, 37);
 
     .extlinks-container
     {
@@ -17,16 +15,9 @@
       height: 100%;
       display: flex;
       align-items: center;
-      position: absolute;
       right: 1px;
       bottom: 2px;
       justify-content: flex-end;
-    }
-
-    .powered
-    {
-      font-size: 12px;
-      color:white;
     }
 
   }
