--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .website
 {
-    background-image: url("./assets/bg1.jpg"); 
+    //background-image: url("./assets/bg1.jpg"); 
     background-color: #cccccc; 
     height: 100%;
     background-position: center; 
@@ -8,4 +8,5 @@
     background-size: cover; 
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
