--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -1,23 +1,26 @@
 .bottombar {
-    height: 60px;
-    width: 100%;
+  height: 80px;
+  width: 55%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+
+  border-bottom: 4px solid rgb(4, 19, 37);
+  border-top: 4px solid rgb(4, 19, 37);
+  box-shadow: 0 0 10px rgb(171, 171, 171);
+  background: #ffffff;
+
+  .extlinks-container {
+    width: 25%;
+    height: 100%;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-
-    border-top: 2px solid lightgray;
-    box-shadow: 0 0 10px rgb(171, 171, 171);
-    background: rgb(4, 19, 37);
-
-    .extlinks-container
-    {
-      width: 25%;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      right: 1px;
-      bottom: 2px;
-      justify-content: flex-end;
-    }
-
+    right: 1px;
+    bottom: 2px;
+    justify-content: flex-end;
   }
+
+}
