--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -20,6 +20,8 @@
     flex-direction: column;
     flex: 1;
     height: 100%;
+    width: 95%;
+    margin-top: 10px;
     .breast-container
     {
         width: 99%;
@@ -31,8 +33,8 @@
     $bioSideMargin: 5px;
     .bio
     {
-        width: 99%;
-        height: 100%;
+        width: 100%;
+        height: 600px;
         margin: 0 auto;
         display: flex;
         flex-direction: row;
