--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -1,28 +1,32 @@
 .navigation {
-  height: 48px;
-  width: 100%;
+  height: 70px;
+  width: 55%;
+  margin-top: 10px;
   display: flex;
 
   justify-content: left;
   align-content: space-between;
   margin-bottom: -1px;
   align-items: center;
-  border-bottom: 1px solid rgb(181, 180, 180);
-  background: rgb(4, 19, 37);
+  border-bottom: 4px solid rgb(4, 19, 37);
+  border-top: 4px solid rgb(4, 19, 37);
+  border-radius: 5px;
+  background: rgb(255, 255, 255);
+  margin-bottom: 10px;
 
   .nav-container {
     display: flex;
     flex-direction: row;
     flex: 1;
     justify-content: flex-end;
-    padding-right: 15px;
+    padding-right: 25px;
   }
 
   .home-box {
-    font-size: large;
-    color: white;
+    font-size: x-large;
+    color: rgb(4, 19, 37);
     font-family: 'Abel';
-    padding-left: 16px;
+    padding-left: 25px;
     text-decoration: none;
     backface-visibility: hidden;
     transform: translateZ(0);
