--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -1,6 +1,7 @@
 .bottombar {
-  height: 80px;
-  width: 55%;
+  height: 4.5vw;
+  min-height: 70px;
+  width: 65%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
