--- a/src/routes/realhome/realhome.styles.scss
+++ b/src/routes/realhome/realhome.styles.scss
@@ -3,65 +3,73 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  width: 98%;
 }
+
 .stats-container {
-  height: 900px;
+  height: 780px;
   width: 100%;
   display: flex;
   flex-direction: row;
 }
 
 .button-container {
-  height: 80px;
-  margin-bottom: 10px;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 $buttonTransitionTime: 0.07s;
 $borderRadius: 4px;
+
 %test {
   position: absolute;
   content: "";
   transition: all $buttonTransitionTime;
 }
+
 .toVenturesButton {
   display: inline-block;
   padding: 5px 10px;
-  margin-top: 5px;
   color: white;
   transform: translate(-5%, -5%);
   vertical-align: middle;
   text-decoration: none;
   font-family: 'Abel';
-  font-size: 1.5vw;
+  font-size: 1.2vw;
   transition: all $buttonTransitionTime;
-  background-color: #3498db;
+  background-color: rgb(4, 19, 37);
 
   border-width: 1px;
   border-radius: $borderRadius;
   border-bottom-right-radius: 0px;
 }
-.toVenturesButton:before { //bottom side
+
+.toVenturesButton:before {
+  //bottom side
   @extend %test;
   bottom: -15px;
   height: 15px;
   width: 102%;
   left: 6.5px;
   transform: skewX(45deg);
-  background-color: darken(#3498db, 20%);
+  background-color: darken(rgb(4, 19, 37), 20%);
 
   border-radius: $borderRadius;
   border-top-right-radius: 0px;
 }
 
-.toVenturesButton:after { //right side
+.toVenturesButton:after {
+  //right side
   @extend %test;
   right: -15px;
   height: 102%;
   width: 15px;
   bottom: -8px;
   transform: skewY(45deg);
-  background-color: darken(#3498db, 30%);
+  background-color: darken(rgb(4, 19, 37), 30%);
 
   border-radius: $borderRadius;
   border-bottom-left-radius: 0px;
@@ -71,7 +79,7 @@ $borderRadius: 4px;
 .toVenturesButton:active {
   margin-left: 10px;
   margin-top: 10px;
-  
+
   &::before {
     bottom: -5px;
     height: 5px;
