--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -1,6 +1,7 @@
 .navigation {
-  height: 70px;
-  width: 55%;
+  height: 4.5vw;
+  min-height: 70px;
+  width: 65%;
   margin-top: 10px;
   display: flex;
 
@@ -8,11 +9,13 @@
   align-content: space-between;
   margin-bottom: -1px;
   align-items: center;
+  border-radius: 5px;
+  margin-bottom: 10px;
+
   border-bottom: 4px solid rgb(4, 19, 37);
   border-top: 4px solid rgb(4, 19, 37);
-  border-radius: 5px;
-  background: rgb(255, 255, 255);
-  margin-bottom: 10px;
+  box-shadow: 0 0 10px rgb(171, 171, 171);
+  background: #ffffff;
 
   .nav-container {
     display: flex;
