--- a/src/routes/components/stats/home.styles.scss
+++ b/src/routes/components/stats/home.styles.scss
@@ -60,7 +60,7 @@
         border: 1px solid rgba(51, 51, 51, 0.384);
         border-radius: 2px;
         height: 100%;
-        width: 4vw;
+        width: 100%;
 
         .category-text {
             margin-left: 5px;
