--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,6 @@
 
-$primary: rgb(4, 19, 37);
-$sub-primary: rgba(229, 242, 255, 1);
+$primary: #062940;
+$sub-primary: rgb(231, 243, 255);
 $theme-font: 'Abel';
 $page-minimum-width: 538px;
 
