--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -6,14 +6,13 @@
   width: 65%;
   margin-top: 10px;
   display: flex;
-  min-width: $page-minimum-width;
+  min-width: 648px;
 
   justify-content: left;
   align-content: space-between;
-  margin-bottom: -1px;
   align-items: center;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 
   border-bottom: 4px solid $primary;
   border-top: 4px solid $primary;
@@ -32,7 +31,11 @@
     font-size: x-large;
     color: $primary;
     font-family: 'Abel';
-    padding-left: 25px;
+    width: 15%;
+    min-width: 154px;
+
+    font-size: 34px;
+    padding-left: 35px;
     text-decoration: none;
     backface-visibility: hidden;
     transform: translateZ(0);
@@ -45,6 +48,8 @@
   .box {
     padding-left: 25px;
     padding-top: 4px;
+    width: 15%;
+    min-width: 122px;
 
     -moz-osx-font-smoothing: grayscale;
     backface-visibility: hidden;
@@ -58,7 +63,7 @@
 
   .logo-container {
     height: 90%;
-    width: 100px;
+    width: 100%;
     text-decoration: none;
     display: flex;
     flex-direction: column;
