--- a/src/routes/components/externallinks/externallinks.styles.scss
+++ b/src/routes/components/externallinks/externallinks.styles.scss
@@ -3,6 +3,7 @@
   display: flex;
   padding-right: 5px;
   padding-top: 5px;
+  padding-right: 20px;
 }
 .ext-box
 { 
@@ -10,6 +11,7 @@
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
+  padding-left: 8px;
 }
 .ext-box:hover
 {
@@ -19,4 +21,9 @@
 {
   padding: 2px 2px;
   cursor: pointer;
+}
+.logo
+{
+  height: 80px;
+  width: 80px;
 }
