--- a/src/routes/home/stats/stats.styles.scss
+++ b/src/routes/home/stats/stats.styles.scss
@@ -1,11 +1,11 @@
-@import "../../../theme.scss";
+@import "../../../globals/theme.scss";
 
 .Home-Page {
   display: flex;
   flex-direction: row;
   align-items: center;
   flex: 1;
-  width: 100%;
+  width: 95%;
 
   .portrait {
     height: 800px;
@@ -23,7 +23,7 @@
   $bioSideMargin: 40px;
 
   .bio {
-    width: 98%;
+    width: 95%;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -53,6 +53,7 @@
   .categories-container {
     display: flex;
     flex-direction: column;
+    height: 100%;
   }
 
   $buttonTransitionTime: 0.1s;
