Abstracted theme colors

--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -13,8 +13,8 @@
   min-width: $page-minimum-width;
   min-height: 130px;
 
-  border-bottom: 4px solid rgb(4, 19, 37);
-  border-top: 4px solid rgb(4, 19, 37);
+  border-bottom: 4px solid $primary;
+  border-top: 4px solid $primary;
   box-shadow: 10px 10px 10px rgb(157, 157, 157);
   background: #ffffff;
 
