New feedback icon, placed bottom bar back in app.js

--- a/src/routes/bottombar.styles.scss
+++ b/src/routes/bottombar.styles.scss
@@ -11,6 +11,7 @@
   border-radius: 5px;
   margin-top: 50px;
   min-width: $page-minimum-width;
+  min-width: 771px;
   min-height: 130px;
 
   border-bottom: 4px solid $primary;
