--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -6,7 +6,7 @@
   width: 65%;
   margin-top: 10px;
   display: flex;
-  min-width: 648px;
+  min-width: 771px;
   min-height: 130px;
 
   justify-content: left;
@@ -25,7 +25,7 @@
     flex-direction: row;
     flex: 1;
     justify-content: flex-end;
-    padding-right: 25px;
+    padding-right: 40px;
   }
 
   .home-box {
@@ -35,7 +35,7 @@
     width: 15%;
     min-width: 200px;
 
-    font-size: 34px;
+    font-size: 40px;
     padding-left: 50px;
     text-decoration: none;
     backface-visibility: hidden;
@@ -49,7 +49,8 @@
   .box {
     padding-top: 4px;
     width: 12%;
-    min-width: 122px;
+    min-width: 159px;
+    max-width: 180px;
 
     -moz-osx-font-smoothing: grayscale;
     backface-visibility: hidden;
@@ -79,6 +80,6 @@
   {
     font-family: $theme-font;
     color: $primary;
-    font-size: larger;
+    font-size: 26px;
   }
 }
