--- a/src/routes/contactme/contactme.styles.scss
+++ b/src/routes/contactme/contactme.styles.scss
@@ -2,4 +2,9 @@
 {
     margin-top: 20px;
     margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
