--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,9 @@
 .website {
     //background-image: url("./assets/bg1.jpg");
     background: linear-gradient(90deg,
-        $sub-primary 0%,
-        rgba(255, 255, 255, 1) 50%,
-        $sub-primary 100%);
+        $sub-primary -30%,
+        rgb(255, 255, 255) 50%,
+        $sub-primary 130%);
     display: flex;
     align-items: center;
     flex-direction: column;
