Added contact titles and scaling

--- a/src/routes/contactme/contactbox/ContactBox.styles.scss
+++ b/src/routes/contactme/contactbox/ContactBox.styles.scss
@@ -8,16 +8,18 @@ $borderRadius: 4px;
     transition: all 0.5s;
 }
 
-$contact-sidesgap: 40px;
+$contact-sidesgap: 2.5rem;
+
 .Contact-Container {
-    transition: all 2s;
-    width: 40%;
-    height: 250px;
+    transition: all 1.6s;
+    width: 50vw;
+    height: 13vh;
     margin-bottom: 9px;
     margin-top: 10px;
     transform: translate(-2%, -2%);
     background-color: white;
     font-family: $theme-font;
+    min-width: 710px;
 
     display: flex;
     flex-direction: row;
@@ -47,7 +49,7 @@ $contact-sidesgap: 40px;
 }
 
 .Contact-Container:hover {
-    transition: all .5s;
+    transition: all .4s;
     margin-left: -120px;
     box-shadow: 20px 10px 10px rgb(222, 222, 222);
 
@@ -68,7 +70,22 @@ $contact-sidesgap: 40px;
     }
 }
 
-.contact-icon {
+.contact-thumb {
+    height: 100%;
+    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+
     margin-left: $contact-sidesgap;
-    height: 45%;
+
+    .contact-icon {
+        margin-right: calc($contact-sidesgap/2.5);
+        height: 5vmin;
+    }
+
+    .icon-text {
+        font-size: 2.6vmin;
+    }
 }
