--- a/src/routes/contactme/contactbox/ContactBox.styles.scss
+++ b/src/routes/contactme/contactbox/ContactBox.styles.scss
@@ -11,7 +11,6 @@ $borderRadius: 4px;
 $contact-sidesgap: 2.5rem;
 
 .Contact-Container {
-    transition: all 1.6s;
     width: 50vw;
     height: 13vh;
     margin-bottom: 9px;
@@ -20,6 +19,8 @@ $contact-sidesgap: 2.5rem;
     background-color: white;
     font-family: $theme-font;
     min-width: 710px;
+    transition: all 1.6s;
+    transition: width 0.5s;
 
     display: flex;
     flex-direction: row;
@@ -77,15 +78,38 @@ $contact-sidesgap: 2.5rem;
     justify-content: flex-start;
     align-items: center;
     flex-direction: row;
-
-    margin-left: $contact-sidesgap;
+    text-decoration: none;
+    margin-right: calc($contact-sidesgap/3);
 
     .contact-icon {
+        margin-left: $contact-sidesgap;
         margin-right: calc($contact-sidesgap/2.5);
         height: 5vmin;
     }
 
     .icon-text {
-        font-size: 2.6vmin;
+        font-size: 1.3vw;
     }
+}
+
+.contact-thumb:hover {
+    .icon-text {
+        font-size: 3vmin;
+    }
+}
+
+.contact-thumb:visited {
+    color: $primary;
+}
+
+.tag {
+    color: darken($sub-primary, 40%);
+}
+
+.contact-description-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75%;
+    font-size: 1vw;
 }
