--- a/src/routes/contactme/contactme.styles.scss
+++ b/src/routes/contactme/contactme.styles.scss
@@ -1,10 +1,42 @@
-.ContactMe-Page
-{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    width: 100%;
+@import '../../globals/theme.scss';
+
+.ContactMe-Page {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 90%;
+
+    .Contacts-Header-Container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        .Contacts-Header {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: $primary;
+            width: 60%;
+            height: 12vh;
+            border-radius: 10px;
+            margin-bottom: 20px;
+
+            .text {
+                color: white;
+            }
+        }
+    }
+
+    .Contacts-Container {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
