--- a/src/routes/contactme/contactme.styles.scss
+++ b/src/routes/contactme/contactme.styles.scss
@@ -19,13 +19,16 @@
             justify-content: center;
             align-items: center;
             background-color: $primary;
-            width: 60%;
-            height: 12vh;
+            width: 50%;
+            height: 5vmax;
             border-radius: 10px;
             margin-bottom: 20px;
+            border: 5px solid black;
 
             .text {
+                font-size: 1.7vw;
                 color: white;
+                font-family: $theme-font;
             }
         }
     }
