--- a/src/routes/home/introduction/introduction.styles.scss
+++ b/src/routes/home/introduction/introduction.styles.scss
@@ -10,9 +10,9 @@ $borderRadius: 4px;
 .image-container
 {
   margin-top: 18px;
-  margin-left: 15px;
+  margin-left: 40px;
   border-radius: 2px;
-  height: 750px;
+  height: 80%;
   width: 35%;
   
   display: flex;
@@ -30,7 +30,7 @@ $borderRadius: 4px;
   margin-top: 18px;
   margin-left: 15px;
   border-radius: 2px;
-  height: 600px;
+  height: 60%;
   width: 50%;
   
   display: flex;
