--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -25,20 +25,20 @@ $borderRadius: 4px;
 .button-container {
   width: 100%;
   height: 120px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 55px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .intro-container {
-  margin-top: 25px;
+  margin-top: 55px;
   background-color: white;
   border: 2px solid $primary;
   border-radius: 4px;
-  height: 800px;
-  width: 55%;
+  height: 37vw;
+  width: 75%;
 
   display: flex;
   flex-direction: row;
