--- a/src/routes/home/explore_button/venturebutton.styles.scss
+++ b/src/routes/home/explore_button/venturebutton.styles.scss
@@ -12,7 +12,7 @@ $borderRadius: 4px;
     padding: 20px 40px;
     color: white;
     transform: translate(-10%, -10%);
-    font-family: "Abel";
+    font-family: $theme-font;
     text-decoration: none;
     font-size: 1.5vw;
     transition: all $buttonTransitionTime;
