--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -16,17 +16,18 @@ $borderRadius: 4px;
 }
 
 .stats-container {
-  height: 800px;
-  width: 100%;
+  height: 39vw;
+  min-height: 800px;
+  width: 90%;
   display: flex;
   flex-direction: row;
 }
 
 .button-container {
   width: 100%;
-  height: 120px;
-  margin-top: 40px;
-  margin-bottom: 55px;
+  height: 140px;
+  margin-top: 15px;
+  margin-bottom: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,8 +38,8 @@ $borderRadius: 4px;
   background-color: white;
   border: 2px solid $primary;
   border-radius: 4px;
-  height: 37vw;
-  width: 75%;
+  height: 33vw;
+  width: 65%;
 
   display: flex;
   flex-direction: row;
