--- a/src/routes/home/stats/stats.styles.scss
+++ b/src/routes/home/stats/stats.styles.scss
@@ -8,9 +8,10 @@
   width: 95%;
 
   .portrait {
-    height: 800px;
+    height: 39vw;
+    min-height: 800px;
     width: 25%;
-    background-color: $primary;
+    background-color: whitesmoke;
   }
 
   .breast-container {
@@ -46,6 +47,7 @@
     flex: 1;
     background-color: #ffffff5b;
     border: 1px solid rgba(51, 51, 51, 0.384);
+    font-family: $theme-font;
     border-radius: 2px;
     margin-right: 1px;
   }
@@ -66,7 +68,7 @@
 
   .categoryButton {
     display: inline-block;
-    font-family: "Abel";
+    font-family: $theme-font;
     background-color: #ffffff;
     transform: translate(-4%, -4%);
     transition: all $buttonTransitionTime;
