--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -1,46 +1,39 @@
 @import '../globals/theme.scss';
 
 .navigation {
-  height: 4.5vw;
-  min-height: 70px;
-  width: 65%;
-  margin-top: 25px;
-  display: flex;
+  height: 6.5rem;
+  width: 60%;
+  margin-top: 20px;
   min-width: 771px;
-  min-height: 130px;
 
+  display: flex;
   justify-content: left;
   align-content: space-between;
   align-items: center;
   border-radius: 5px;
   margin-bottom: 40px;
 
-  border-bottom: 4px solid $primary;
-  border-top: 4px solid $primary;
-  box-shadow: 10px 10px 10px rgb(157, 157, 157);
-  background: #ffffff;
-
+  box-shadow: 6px 6px 6px rgb(186, 186, 186);
   .nav-container {
     display: flex;
     flex-direction: row;
     flex: 1;
     justify-content: flex-end;
-    padding-right: 40px;
+    padding-right: 30px;
   }
 
   .home-box {
     color: $primary;
-    font-family: 'Abel';
-    width: 15%;
-    min-width: 200px;
+    font-family: $theme-font;
+    width: 30%;
+    min-width: 230px;
 
     font-size: 40px;
-    padding-left: 50px;
+    padding-left: 45px;
     text-decoration: none;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
+    transition: transform 0.15s ease-out;
   }
+
   .home-box:hover {
     transform: scale(1.10);
   }
@@ -52,8 +45,6 @@
     max-width: 180px;
 
     -moz-osx-font-smoothing: grayscale;
-    backface-visibility: hidden;
-    transform: translateZ(0);
     transition: transform 0.25s ease-out;
   }
 
@@ -70,13 +61,13 @@
     align-items: center;
     justify-content: center;
   }
-  .logo
-  {
-    max-width: 90px;
-    max-height: 90px;
+
+  .logo {
+    max-width: 60px;
+    max-height: 60px;
   }
-  .logo-title
-  {
+
+  .logo-title {
     font-family: $theme-font;
     color: $primary;
     font-size: 26px;
