--- a/src/globals/theme.scss
+++ b/src/globals/theme.scss
@@ -1,5 +1,5 @@
-$primary: #530e05;
-$sub-primary: #ffebea;
+$primary: #062940;
+$sub-primary: #0863a0;
 $title-font: '';
 $theme-font: 'Ubuntu';
 $page-minimum-width: 803px;
