--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,9 @@
 
 .website {
     background: linear-gradient(90deg,
-            white -10%,
-            #f5f4ec 50%,
-            white 110%);
+            #f5f4ec -10%,
+            white 50%,
+            #f5f4ec 110%);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -17,11 +17,11 @@
 }
 
 ::-webkit-scrollbar-track {
-    background: white;
+    background: #f5f4ec;
     border-radius: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: $sub-primary;
+    background: $primary;
     border-radius: 2px;
 }
