--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -36,7 +36,7 @@ $borderRadius: 4px;
 .intro-container {
   margin-top: 55px;
   background-color: white;
-  border: 2px solid $primary;
+  //border: 2px solid $primary;
   border-radius: 4px;
   height: 33vw;
   width: 65%;
