--- a/src/routes/navigation.styles.scss
+++ b/src/routes/navigation.styles.scss
@@ -2,7 +2,7 @@
 
 .navigation {
   height: 6.5rem;
-  width: 60%;
+  width: 65%;
   margin-top: 20px;
   min-width: 771px;
 
@@ -12,8 +12,8 @@
   align-items: center;
   border-radius: 5px;
   margin-bottom: 40px;
-
-  box-shadow: 6px 6px 6px rgb(186, 186, 186);
+  background-color: white;
+  box-shadow: 3px 3px 6px rgb(186, 186, 186);
   .nav-container {
     display: flex;
     flex-direction: row;
@@ -40,7 +40,7 @@
 
   .box {
     padding-top: 4px;
-    width: 12%;
+    width: 11%;
     min-width: 159px;
     max-width: 180px;
 
@@ -63,8 +63,8 @@
   }
 
   .logo {
-    max-width: 60px;
-    max-height: 60px;
+    max-width: 50px;
+    max-height: 50px;
   }
 
   .logo-title {
